objects/ASI_CRM_Group_Outlet_Type__c.object
<CustomObject>
    <description>ASI PROS Group Outlet type</description>
    <fields>
        <fullName>ASI_CRM_Area__c</fullName>
        <label>Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HCMC</fullName>
                </value>
                <value>
                    <fullName>HANOI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Channel_Code__c</fullName>
        <label>Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Sub_Type__c</fullName>
        <label>Outlet Sub-Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family KTV</fullName>
                </value>
                <value>
                    <fullName>Asian Restaurant</fullName>
                </value>
                <value>
                    <fullName>Western Restaurant</fullName>
                </value>
                <value>
                    <fullName>Casual Dining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Name__c</fullName>
        <label>Group Outlet Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CR (中餐)</fullName>
                </value>
                <value>
                    <fullName>CRB</fullName>
                </value>
                <value>
                    <fullName>Family KTV (FK)</fullName>
                </value>
                <value>
                    <fullName>HEB</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar (HEB)</fullName>
                </value>
                <value>
                    <fullName>Japanese Style Night Club (JNC)</fullName>
                </value>
                <value>
                    <fullName>Karaoke (KO)</fullName>
                </value>
                <value>
                    <fullName>LEB</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar (LEB)</fullName>
                </value>
                <value>
                    <fullName>LS (菸專)</fullName>
                </value>
                <value>
                    <fullName>LSM</fullName>
                </value>
                <value>
                    <fullName>LSW</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Night Club (NC)</fullName>
                </value>
                <value>
                    <fullName>Offtrade</fullName>
                </value>
                <value>
                    <fullName>Piano Bar (PB)</fullName>
                </value>
                <value>
                    <fullName>RES</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Restaurant (WR)</fullName>
                </value>
                <value>
                    <fullName>Subwholesaler</fullName>
                </value>
                <value>
                    <fullName>Taiwanese Style Night Club (TNC)</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>Traditional On-Trade (TOT)</fullName>
                </value>
                <value>
                    <fullName>Uniform Night Club (UNC)</fullName>
                </value>
                <value>
                    <fullName>WL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Criteria_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Criteria Set</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_SG_Image_Level_Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Image Level Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Image Level Criteria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Criteria_Set__c</referenceTo>
        <relationshipLabel>Group Outlet Types (Image Level)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Group_Outlet_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Outlet_Type_Count__c</fullName>
        <label>Outlet Type Count</label>
        <summaryForeignKey>ASI_CRM_Outlet_Type__c.ASI_CRM_SG_Group_Outlet_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Criteria_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Criteria Set</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_SG_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_CRM_TW_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_CRM_TH_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_MY_Volume_Potential_Criteria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Criteria_Set__c</referenceTo>
        <relationshipLabel>Group Outlet Types (Volume Potential)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Volume_Group_Outlet_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Outlet Type</label>
    <listViews>
        <fullName>ASI_CRM_MY_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_MY_Channel_Code__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Name__c</columns>
        <columns>ASI_CRM_SG_Image_Criteria_Set__c</columns>
        <columns>ASI_CRM_SG_Volume_Criteria_Set__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Group_Outlet_Type__c.ASI_CRM_MY_Group_Outlet_Type</value>
        </filters>
        <label>MY Group Outlet Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Group_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Name__c</columns>
        <columns>ASI_CRM_SG_Image_Criteria_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Group_Outlet_Type__c.ASI_CRM_TH_Group_Outlet_Type</value>
        </filters>
        <label>TH Group Outlet Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Name__c</columns>
        <columns>ASI_CRM_SG_Outlet_Type_Count__c</columns>
        <columns>ASI_CRM_SG_Image_Criteria_Set__c</columns>
        <columns>ASI_CRM_SG_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Group_Outlet_Type__c.ASI_CRM_TW_Group_Outlet_Type</value>
        </filters>
        <label>TW Group Outlet Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Group_Outlet_Types</fullName>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Name__c</columns>
        <columns>ASI_CRM_SG_Image_Criteria_Set__c</columns>
        <columns>ASI_CRM_Outlet_Sub_Type__c</columns>
        <columns>ASI_CRM_Area__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Group_Outlet_Type__c.ASI_CRM_VN_Group_Outlet_Type</value>
        </filters>
        <label>VN Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Name__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Outlet_Type_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GO-{00000}</displayFormat>
        <label>Group Outlet Type No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Outlet Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM MY Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM SG Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM TH Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM TW Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>ASI CRM VN Group Outlet Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>